tests/NormalTests/paczka1/small_fuzzy/54595983.err
Error in line 1: 3sZrB6Mg A224 86,38
Error in line 8: 3sZrB6Mg A224 309,9
Error in line 14: fql A635 62,2
